--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-material-ui-carousel": "^3.2.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-slideshow-image": "^3.7.0",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4"
   },
