--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-elastic-carousel": "^0.11.5",
+    "react-fontawesome": "^1.7.1",
     "react-material-ui-carousel": "^3.2.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
